2010-06-22  Andreia Gaita  <avidigal@novell.com>

	* network-curl.cpp: activate ssl soft check (host/ip only, no
	  local certificates yet)

2010-06-21  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp (qtree_insert): Use qtree_new(). Also
	optimized to use a temporary variable to hold the value of pow2 of
	'level' so we didn't need to calculate it a dozen times per loop.

2010-06-21  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp (qtree_set_image): Renamed from
	set_value(). The value is always a cairo_surface_t image.
	(qtree_lookup_image): Renamed from lookup_data().
	(qtree_has_image): Renamed from has_value().
	(timer macros): Fixed no-op macro names.
	(_qtree_next_sibling): Precalculate pow2 (l) so we don't have to
	calculate it multiple times in some of the conditions.

2010-06-21  Jeffrey Stedfast  <fejj@novell.com>

	* uielement.h (UIElement): Move the Right mouse button events to
	the public grouping.

2010-06-18  Chris Toshok  <toshok@ximian.com>

	* pal/gtk/config-dialog-gtk.h,cpp: add permissions dialog page.

	* moonlightconfiguration.h,cpp: add GetKeys and RemoveKey.

2010-06-18  Chris Toshok  <toshok@ximian.com>

	* pal/gtk/pal-gtk.cpp (MoonWindowingSystemGtk::ShowConsentDialog):
	c&p a bunch of the pipeline-ui dialog code here.

	* pal/capture/pal-linux-capture.cpp (MoonCaptureServiceLinux::RequestSystemAccess):
	use the Consent class instead of using the pal directly.

	* moonlightconfiguration.h,cpp (MoonlightConfiguration): add
	HasKey method, and change return value of GetBooleanValue to bool.

	* consent.h, consent.cpp: new files containing methods for popping
	up the various consent dialogs moonlight will have (clipboard,
	fullscreen pinning, video capture, etc).

2010-06-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* src.mdp:
	* enums.h:
	* enums.cpp:
	* textbox.h:
	* printing.h:
	* uielement.h:
	* webbrowser.h:
	* inputscope.h:
	* deployment.h:
	* richtextbox.h:
	* textelement.h:
	* richtextbox.cpp: